LIN-3445/LIN-3446 :: Update to Vaadin 24.1 Beta
Change-Id: Ie964ec8774ab31f9a2a72f05be4e7c47a4d7bb32